<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menuItems" >
        <item>Moblie</item>
        <item>EVDO</item>
        <item>Service Numbers</item>
        <item>About</item>
    </string-array>

    <string name="app_name">Ethionet Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">OCR Camera</string>
    <string name="ocr_notice"> The OCR feature is experimental. It\'s reliability depends on several
        factors some of which are the quality of the camera available, the focus
        , the lighting condition and how clean the card is. Keep the limitations in mind when using it.</string>

    <string name="ocr">OCR</string>
    <string name="call_me_back">Call me</string>
    <string name="card_number">Card Number</string>
    <string name="fill">Fill</string>
    <string name="check">Check</string>
    <string name="transfer">Transfer</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="title_activity_about">About</string>
    <string name="me">Yohannes Tamru</string>
    <string name="my_email">yohannist@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_app">        ETC Payment Assistant

        8/1/2014</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="checkBalanceLongAM">ያለዎት ቀሪ ሂሳብ</string>
    <string name="checkBalanceLong">Check Balance</string>
    <string name="evdoNumber">EVDO Phone Number</string>
    <string name="evdoNotice">*Note: The app will prepare the required inputs to interact with the 903 phone service but you still needs to tap \"yes\" to send the inputs at the proper time.</string>


    <string-array name="colorArray">
        <item>#336699</item>
        <item>#fff46100</item>
        <item>#336699</item>
        <item>#666666</item>
        <item>#ff4dc669</item>
        <item>#028482</item>
        <item>#ffef5e50</item>
        <item>#3399FF</item>
        <item>#287AA9</item>
        <item>#006699</item>
        <item>#0099CC</item>
        <item>#5BC236</item>
        <item>#ff11c3dc</item>
        <item>#ff6bde30</item>
        <item>#21B6A8</item>
        <item>#FF8000</item>
        <item>#266A2E</item>
        <item>#ffe3263a</item>
        <item>#3366CC</item>
        <item>#6699CC</item>
        <item>#6699FF</item>
        <item>#ffaf9cd0</item>
        <item>#ff75aeaa</item>
    </string-array>

</resources>
