<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/txtEVDOPhoneNumber"
        android:layout_gravity = "center_vertical|center_horizontal"
        android:background="@drawable/rounded_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/evdoNumber" />

    <Button
        android:id="@+id/btnCheckEVDOBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/call_me_button"
        android:text="@string/check"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:id="@+id/txtCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/card_number"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transfer_button"
        android:text="@string/fill"
        android:id="@+id/btnFillEvdo"
        android:layout_gravity="center_horizontal" />


</LinearLayout>