<com.apptech.yohannes.paymentassistant.helpers.AnimatableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="4dp"

    android:id="@+id/contactTaskLayout"
    android:padding="6dp"
    android:layout_marginLeft="14dp"
    tools:context=".activities.ContactTask"
    android:orientation="vertical"
    android:background="@android:drawable/picture_frame">

    <TextView
        android:id="@+id/txtContactLabel"
        android:textSize="105sp"
        android:text="F"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="125sp"
        android:textColor="@color/white"
        android:background="@color/light"
        android:typeface="monospace"
        android:gravity="center_horizontal|center_vertical" />

    <TextView android:id="@+id/txtContactName"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark"
        android:textSize="25dp" />

    <TextView android:id="@+id/txtContactPhone"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/userTaskLayouts"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button android:id="@+id/btnCallMeBack"
            android:layout_width="fill_parent"
            android:layout_marginTop="4dp"
            android:layout_height="fill_parent"
            android:text="@string/call_me_back"
            android:layout_weight="1"
            android:background="@drawable/call_me_button"
            android:textColor="@color/white" />
        <Button android:id="@+id/btnTransfer"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_height="fill_parent"
            android:text="@string/transfer"
            android:background="@drawable/transfer_button"
            android:textColor="@color/white" />
        <Button android:id="@+id/btnCall"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_height="fill_parent"
            android:text="@string/call"
            android:background="@drawable/call_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <ListView android:id="@+id/cashList"
        android:layout_width="fill_parent"
        android:visibility="gone"
        android:layout_height="fill_parent"
        android:choiceMode="singleChoice"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true" />
</com.apptech.yohannes.paymentassistant.helpers.AnimatableLinearLayout>
